company_it_env/scenario/k8s/internal-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-api
  namespace: company-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-api
  template:
    metadata:
      labels:
        app: internal-api
    spec:
      containers:
        - name: api
          image: ghcr.io/northbridge/internal-api:1.9.4
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: internal-api
  namespace: company-it
spec:
  selector:
    app: internal-api
  ports:
    - port: 8080
      targetPort: 8080
