company_it_env/scenario/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-public
  namespace: company-it
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: helpdesk.northbridge.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helpdesk-web
                port:
                  number: 80
